a564309 (HEAD, 7.x-1.x) Issue #2645880 by OnkelTem,interdruper: Add full list of Themes and Modes
08d84de Do not call drush_user_abort() if user selects not to download the library when installing with drush.
4808dca (origin/HEAD, origin/7.x-1.x) Issue #2645848 by onkeltem: Uncaught TypeError: Cannot read property form of undefined.
e642546 Issue #2643228 by interdruper: adding code folding option.
1dd13f4 (tag: 7.x-1.5) Issue #2409583 by jarviss,interdruper: add Ace Editor to Devep php execute form.
83e5b80 Issue #2641022 by interdruper: Content changes not saved.
d48b735 CHANGELOG.txt updated.
3e6cd94 (tag: 7.x-1.4) Issue #2255597 by interdruper: Make it work with jQuery 1.10 and above
82210ac Issue #2255597 by interdruper: Make it work with jQuery 1.10 and above
ef6ab82 Fixes in drush command 'dl-ace'.
a079406 README.txt updated
76dd09a (tag: 7.x-1.3) Revert "Issue #2255597 by interdruper, alex-bukach: Make it work with jQuery 1.10 and above"
a020316 (tag: 7.x-1.2) Issue #2255597 by interdruper, alex-bukach: Make it work with jQuery 1.10 and above
26a853f Issue #2426307 by interdruper, Quty: Saving field with an ace format fails the first time
7542015 Issue #2426307 by interdruper, Quty: Saving field with an ace format fails the first time
7b9f1a5 Issue #2625650 by Infanty, interdruper: Fix PHP syntax highlighting: missing base_path in library source path.
ab41d17 Code styling: replacing tabs by spaces in all source files.
418888c Issue #2330383 by mkhamash,interdruper: Multi-site libraries path.
916e6ab Show all the installed themes in the theme list.
4780cf5 CHANGELOG.txt updated.
544afe2 Issue #414278 by interdruper: Display formatter that outputs the content in an ace editor: fixed minor issues, available options reviewed.
c1709d6 Using libraries_detect() for checking if Ace Library is properly installed.
64417be Added hook_libraries_info().
755ac3e Removing some commented code from ace_editor.drush.inc.