@@ -83,7 +83,10 @@
               $pre.css('font-size', editorSettings['fontsize']);
               $pre.data('editor_instance', editor_instance);
               // enable options and snippets
+              ace.require("ace/ext/language_tools");
               editor_instance.setOptions({
+                enableBasicAutocompletion: true,
+                enableLiveAutocompletion: false,
                 tabSize: editorSettings['tabsize'],
                 useSoftTabs: true
               });
@@ -318,7 +321,7 @@
       $controls.append('<div class="control"><input type="checkbox" name="show_line_numbers" class="show_line_numbers" checked>' +
                 '<label>Line numbers (show errors)</label></div>');
       $controls.append('<div class="control"><input type="checkbox" name="autocomplete" class="ace_autocomplete" checked>' +
-                '<label>Autocomplete</label></div>');
+                '<label>Auto-pairing</label></div>');
       $modes_select = $('<div class="control"><select name="mode" class="mode"></select></div>');
       $.each(editorSettings['available_modes'], function(key, value) {
         var selected = (key == 'html') ? ' selected' : '';
